--- a/reqres/Components/UserListComponent.storyboard
+++ b/reqres/Components/UserListComponent.storyboard
@@ -77,6 +77,44 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n5f-cH-ODw">
                                 <rect key="frame" x="0.0" y="248" width="414" height="614"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="76" id="6Mc-YK-2sV" customClass="UserListCell" customModule="reqres" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="76"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6Mc-YK-2sV" id="zJG-G2-DDO">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="76"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="3gi-pw-VdN">
+                                                    <rect key="frame" x="10" y="11" width="50" height="54.666666666666671"/>
+                                                    <color key="tintColor" name="Reddish"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" priority="999" constant="50" id="4Vl-cb-k1u"/>
+                                                        <constraint firstAttribute="width" constant="50" id="QlX-Td-tSC"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8P-ek-HiM">
+                                                    <rect key="frame" x="70" y="27.666666666666671" width="314" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                                    <color key="textColor" name="Dark"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3gi-pw-VdN" firstAttribute="leading" secondItem="zJG-G2-DDO" secondAttribute="leading" constant="10" id="4Nj-jG-GMk"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="g8P-ek-HiM" secondAttribute="trailing" constant="10" id="B5d-RM-guV"/>
+                                                <constraint firstAttribute="bottom" secondItem="3gi-pw-VdN" secondAttribute="bottom" constant="10" id="Gg0-6n-JoU"/>
+                                                <constraint firstItem="g8P-ek-HiM" firstAttribute="centerY" secondItem="zJG-G2-DDO" secondAttribute="centerY" id="M5e-ec-KaM"/>
+                                                <constraint firstItem="g8P-ek-HiM" firstAttribute="leading" secondItem="3gi-pw-VdN" secondAttribute="trailing" constant="10" id="e7Z-Tc-uEP"/>
+                                                <constraint firstItem="3gi-pw-VdN" firstAttribute="top" secondItem="zJG-G2-DDO" secondAttribute="top" constant="10" id="y2b-LO-BVZ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="g8P-ek-HiM" id="x6y-sm-QAC"/>
+                                            <outlet property="userImageView" destination="3gi-pw-VdN" id="wpA-ZB-1WM"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" name="Tan"/>
@@ -117,6 +155,7 @@
         <image name="arrowshape.turn.up.left" catalog="system" width="64" height="52"/>
         <image name="person.2" catalog="system" width="64" height="40"/>
         <image name="person.badge.plus" catalog="system" width="64" height="58"/>
+        <image name="person.crop.circle" catalog="system" width="64" height="60"/>
         <namedColor name="Dark">
             <color red="0.16500000655651093" green="0.16500000655651093" blue="0.16500000655651093" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
